# alfacrm-client

./: pyproject.toml  setup.py
src/: main.py
src/alfacrm/: __init__.py  client.py  exceptions.py  task.py
src/alfacrm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/alfacrm/models/: CGI.py  __init__.py  base.py  bonus.py  branch.py  cgi.py  communication.py  customer-tariff  customer.py  customer_tariff.py  discount.py  group.py  lead_reject.py  lead_source.py  lead_status.py  lesson.py  location.py  log.py  pay.py  regular_lesson.py  room.py  study-status.py  subject.py  tariff.py  task.py  teacher.py
