[project]
name = "alfacrm-client"
version = "0.1.0"
description = "Клиент для ALFA CRM API"
authors = [{name = "Yegor Panin", email = "epanin12@gmail.com", github = "https://github.com/YegorPanin"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"