[build-system]
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfacrm"
version = "0.1"
description = "ALFA CRM API client"
readme = "README.md"
authors = [
    { name = "Yegor Panin", email = "epanin12@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28.0"
]

[project.urls]
Repository = "https://github.com/YegorPanin/alfacrm-client"
